--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "dependencies": {
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "firebase": "7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-router-flux": "^4.2.0",
+    "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
